--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,6 +182,7 @@ button.closeBtn {
   display: inline-block;
   color: #333;
   border-radius: 6px;
+  margin-bottom: 10px;
 }
 .titleAdjust p div {
   display: inline-block;
@@ -1508,6 +1509,12 @@ textarea.form-element-field:not(:placeholder-shown)~.form-element-label {
 }
 
 @media (max-width:767.98px) {
+
+  .scSlider  .slider-content {
+    text-align: center;
+    background-size: cover !important;
+}
+
   .modal.fade.modal-bottom-center .modal-dialog {
     width: calc(100% - (.5rem*2))
   }
@@ -1802,4 +1809,8 @@ table.cj-wysiwyg-table td {
   position:inherit !important;
   height:330px;
   top:0;
+}
+
+.titleAdjust table {
+  table-layout: auto !important;
 }
