--- a/public/clc/assets/css/style.css
+++ b/public/clc/assets/css/style.css
@@ -368,7 +368,7 @@ footer#footerdown {
 #clctop {
   width: 100%;
   height: 80vh;
-  background: url(/clc/assets/img/clcback.png);
+  background: url(/clc/assets/img/clcbackground.png);
 }
 
   #clctop h1 {
@@ -413,9 +413,14 @@ h2.Launchheading {
 #clcabout p {
   color: #000000;
   font-weight: 400;
-  line-height: 26px;
-  font-size: 14px;
+  line-height: 34px;
+  font-size: 16px;
 }
+section.meetattend {
+  padding: 10px 0px;
+  background: #dee2e621;
+}
+
 section.advantages ul li:after {
   content: "";
   background: url(/clc/assets/img/warning.png);
@@ -490,11 +495,11 @@ p.points {
   display: inline-block;
   padding: 20px 20px;
   position: relative;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 30px;
   font-style: italic;
   border-left: 3px solid red;
-  background-color: #dee2e64a;
+  background-color: #dee2e624;
   border-radius: 0 4px 4px 0;
 }
 .clc.effective.heading h3 {
@@ -720,6 +725,55 @@ td.colm {
   position: relative;
   display: flex;
 }
+.honouringtext {
+  position: relative;
+  top: -40px;
+}
+/*expect*/
+section.expect {
+  background-color: #d5d5d53b;
+
+}
+.expectt.text-center {
+  padding: 10px 0px;
+}
+.expectcontent img {
+  width: 100%;
+  max-width: 15%;
+}
+h2.meetheading {
+  color: black;
+  line-height: 45px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+h2.meetheading span {
+  color: red;
+  line-height: 45px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.expectcontent {
+  background: #ffff;
+  height: 100%;
+}
+.expectcontent h3 {
+  font-size: 20px;
+  font-weight: 800;
+  color: black;
+  margin: 20px 0px;
+}
+.expectcontent p {
+
+    color: lightslategray;
+    font-size: 17px;
+}
+.attendeesmeet {
+  padding: 25px 0px;
+}
+
 
 /* table */
 
