--- a/public/clc/assets/css/style.css
+++ b/public/clc/assets/css/style.css
@@ -368,7 +368,7 @@ footer#footerdown {
 #clctop {
   width: 100%;
   height: 80vh;
-  background: url(/clc/assets/img/clcbackground.png);
+  background: url(/clc/assets/img/clctopback.jpg);
 }
 
   #clctop h1 {
