--- a/public/brp/assets/landing/brp/css/style.css
+++ b/public/brp/assets/landing/brp/css/style.css
@@ -180,6 +180,13 @@ img {
     max-width: 100%;
 }
 
+
+
+h2.text-capitalize.page-title.mb-4 {
+    font-size: 28px;
+    margin-bottom: 10px !important;
+}
+
 /* ******************************
 :: 4.0 COMMON CSS
 ****************************** */
@@ -301,7 +308,7 @@ img {
 }
 
 .ptb_100 {
-    padding: 100px 0;
+    padding: 30px 0;
 }
 
 .ptb_150 {
@@ -500,7 +507,7 @@ img {
 
 .btn,
 .btn:active,
-.btn.sApp-btn:before,{
+.btn.sApp-btn:before{
     background: #dc3545;
 }
 
@@ -2772,7 +2779,7 @@ img {
 
 .btn,
 .btn:active,
-.btn.sApp-btn:before,{
+.btn.sApp-btn:before{
     background: #dc3545;
 }
 
@@ -4450,12 +4457,9 @@ img {
 	width:120px;
 }
 
-
-
 .ptb_10
 {
     
     padding: 50px 0;
 }
-
-
+}
