--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2419,3 +2419,37 @@ body#pageid-634 .titleAdjust p div a {
 body#pageid-634 .admidsionProcess .titleAdjust table span {
   word-break: break-all !important;
 }
+
+body#pageid-1013 .image span {
+  min-height: 410px;
+}
+body#pageid-1013 {
+  background: #f6f6f6;
+}
+body#pageid-1013 .image {
+  padding: 5px;
+  background: #fff;
+  box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.2);
+}
+body#pageid-1013 figcaption h3 {
+  text-transform: none !important;
+  font-weight: 400 !important;
+  text-align: center !important;
+  font-size: 15px !important;
+  color: #fff !important;
+  background: #2467c3;
+  display: block !important;
+  padding: 5px !important;
+}
+body#pageid-1013 figcaption::before {
+  content: none !important;
+}
+body#pageid-1013 figcaption {
+  padding: 0 !important;
+}
+body#pageid-1013 figure.snip1527 {
+  overflow: visible !important;
+}
+body#pageid-1013 .snip1527:hover img, body#pageid-1013 .snip1527.hover img {
+  transform: scale(1) !important;
+}
