--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2420,18 +2420,18 @@ body#pageid-634 .admidsionProcess .titleAdjust table span {
   word-break: break-all !important;
 }
 
-body#pageid-1013 .image span {
+body#pageid-1013 .image span, #pageid-1015 .image span {
   min-height: 410px;
 }
-body#pageid-1013 {
+body#pageid-1013, #pageid-1015 {
   background: #f6f6f6;
 }
-body#pageid-1013 .image {
+body#pageid-1013 .image, #pageid-1015 .image {
   padding: 5px;
   background: #fff;
   box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.2);
 }
-body#pageid-1013 figcaption h3 {
+body#pageid-1013 figcaption h3, #pageid-1015 figcaption h3 {
   text-transform: none !important;
   font-weight: 400 !important;
   text-align: center !important;
@@ -2441,15 +2441,28 @@ body#pageid-1013 figcaption h3 {
   display: block !important;
   padding: 5px !important;
 }
-body#pageid-1013 figcaption::before {
+body#pageid-1013 figcaption::before, #pageid-1015 figcaption::before {
   content: none !important;
 }
-body#pageid-1013 figcaption {
+body#pageid-1013 figcaption, #pageid-1015  figcaption {
   padding: 0 !important;
 }
-body#pageid-1013 figure.snip1527 {
+body#pageid-1013 figure.snip1527, #pageid-1015 figure.snip1527 {
   overflow: visible !important;
 }
-body#pageid-1013 .snip1527:hover img, body#pageid-1013 .snip1527.hover img {
+body#pageid-1013 .snip1527:hover img, body#pageid-1013 .snip1527.hover img, #pageid-1015 .snip1527:hover img, #pageid-1015 .snip1527.hover img {
   transform: scale(1) !important;
+}
+
+a.hilightLink {
+  text-transform: uppercase;
+  font-weight: 500 !important;
+  background: #cecece;
+  text-align: center;
+  padding: 6px 0;
+  border-radius: 5px;
+  display: block;
+  margin-top: 20px;
+  max-width: 170px;
+  font-size: 13px !important;
 }
